# code-flow-mcp

./: .gitignore  AGENTS.md  README.md  client.py  codeflow.config.yaml  pyproject.toml  requirements.txt  run.sh
.kiro/steering/: product.md  structure.md  tech.md
.roo/: mcp.json
code_flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
code_flow/cli/: code_flow.py
code_flow/core/: call_graph_builder.py  config.py  cortex_memory.py  drift_analyzer.py  drift_clusterer.py  drift_config.py  drift_features.py  drift_models.py  drift_report.py  drift_topology.py  llm_summary.py  models.py  structured_extractor.py  utils.py  vector_store.py
code_flow/mcp_server/: README.md  __main__.py  analyzer.py  llm.py  server.py
code_flow_graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
code_flow_graph/cli/: code_flow_graph.py
code_flow_graph/code_vectors_chroma/: chroma.sqlite3
code_flow_graph/core/: __init__.py  ast_extractor.py  call_graph_builder.py  config.py  cortex_memory.py  drift_analyzer.py  drift_clusterer.py  drift_config.py  drift_features.py  drift_report.py  drift_topology.py  models.py  python_extractor.py  typescript_extractor.py  utils.py  vector_store.py
code_flow_graph/mcp_server/: README.md  __main__.py  analyzer.py  llm.py  server.py  tools.py
docs/: IMPROVE_CALL_GRAPH_PLAN.md  MCP-BLUEPRINT.md  MCP-GUIDE.md  MCP-PLAN.md  MCP-PRD.md  NEXT_LEVEL.md  TYPESCRIPT_API.md  TYPESCRIPT_CLI.md  TYPESCRIPT_EXAMPLES.md  TYPESCRIPT_TROUBLESHOOTING.md  USER_GUIDE.md  WHITEPAPER.md  index.html
docs/features/: TYPESCRIPT.md
tests/: test_summary_generation.py
tests/code_vectors_chroma/: chroma.sqlite3
tests/core/: test_cortex_memory.py  test_drift_topology.py  test_structured_integration.py
tests/mcp_server/: test_analyzer.py  test_background_analysis.py  test_server.py  (+1 more)
(+90 files in other folders)
