[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-flow-graph"
requires-python = ">=3.11"
version = "0.3.0"
dependencies = [
    "mcp[cli]",
    "pyyaml",
    "watchdog>=2.0",
    "pytest",
    "pytest-asyncio",
    "pydantic",
    "chromadb>=1.1.0",
    "sentence-transformers>=5.1.0",
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
code_flow_graph_mcp_server = "code_flow_graph.mcp_server.__main__:main"
code_flow_graph = "code_flow_graph.cli.code_flow_graph:main"

[tool.setuptools.packages.find]
exclude = ["code_vectors_chroma*"]
