[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-flow"
requires-python = ">=3.11"
version = "0.3.0"
dependencies = [
    "mcp[cli]",
    "pyyaml",
    "watchdog>=2.0",
    "pytest",
    "pytest-asyncio",
    "pydantic",
    "chromadb>=1.1.0",
    "sentence-transformers>=5.1.0",
    "openai[aiohttp]>=1.0.0",
    "aiohttp>=3.9.0",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-rust",
]

[project.scripts]
code_flow_mcp_server = "code_flow.mcp_server.__main__:main"
code_flow = "code_flow.cli.code_flow:main"

[tool.setuptools.packages.find]
exclude = ["code_vectors_chroma*"]
